tests/lang/s00_bootstrap/t07_c_invalid_identifier_no_numeric_start.nim
discard """
  description: "Ensure invalid identifiers are errors."
  errormsg: ""
"""

1_is_not_ok